# My_Script_Reader

./: .gitignore
02.1_file_parsers/: package-lock.json
02.1_file_parsers/c#/: FileParser.cs
02.1_file_parsers/js_parser/: my_csv_parser.js  my_json_parser.js  my_txt_parser.js  my_xml_parser.js  my_yaml_parser.js  package-lock.json  package.json
02.1_file_parsers/python/: main.py
02.1_file_parsers/python/my_modules/: __init__.py  my_parser.py
02._data_formats/: sample.xml
02._data_formats/files/: sample.csv  sample.json  sample.txt  sample.xml  sample.yaml
02._data_formats/node/: index.js  package-lock.json  package.json
02._data_formats/node/routers/: csvRouter.js  (+4 more)
03._python_env/poetry/: pyproject.toml
04._basic-servers/node/: app.js
04._basic-servers/python/: main.py  pyproject.toml
05._date/node/: index.js
05._date/python/: main.py
06._server_to_server/node/: app.js
06._server_to_server/python/: main.py  pyproject.toml
07._dotenv/node/: package-lock.json  package.json
07._dotenv/python/: main.py  pyproject.toml
08._database_documentation/backup/: backup.sql
08._database_documentation/documentation/: mydb_mro_docs.html
09._OpenApi/node/: app.js  package.json
09._OpenApi/python/: main.py
12._server_sent_events/node/: app.js
12._server_sent_events/python/: pyproject.toml
12._server_sent_events/python/templates/: index.html
13._github_webhooks/node/: app.js
13._github_webhooks/python/: main.py  pyproject.toml
14._Azure_Functions/: requirements.txt
14._Azure_Functions/PythonHttpTrigger/: function.json
15._websockets/node/: client.js  package-lock.json  package.json  server.js
16._CORS/node/: app.js
16._CORS/python/: pyproject.toml
17._multipart-forms/node/: app.js
17._multipart-forms/python/: main.py  pyproject.toml
18._Redis/node/: index.js
19._Webscraping/node/: index.html  index.js
19._Webscraping/python/1._data_scraper/: data_scraper.py  pyproject.toml
19._Webscraping/python/2._web_crawler/: pyproject.toml  web_crawler.py
19._Webscraping/python/3._scrappy_basic/: pyproject.toml
20._GraphQL/node/: index.js  package.json
21._sqlite/node/: index.js  package-lock.json  package.json
21._sqlite/python/: main.py  pyproject.toml
Mandatory_2/Mandatory_2_2/: movies.db  pyproject.toml  web_scraping.py
Mandatory_2/my-SSO-app/: README.md  package-lock.json  package.json
data_formats/: json.json  sample.csv  txt.txt  xml.xml
python/: main.py
python/my_modules/: my_parser.py
(+30 files in other folders)
