[tool.poetry]
name = "2-web-crawler"
version = "0.1.0"
description = ""
authors = ["erhanbasaran <erha0045@stud.kea.dk>"]
readme = "README.md"
packages = [{include = "2"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
regex = "^2023.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
